--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,25 @@
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 400;
+  src: local(""), url("../fonts/barlow-v5-latin-regular.woff2") format("woff2"), url("../fonts/barlow-v5-latin-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../fonts/barlow-v5-latin-700.woff2") format("woff2"), url("../fonts/barlow-v5-latin-700.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/fraunces-v10-latin-900.eot");
+  src: local(""), url("../fonts/fraunces-v10-latin-900.eot?#iefix") format("embedded-opentype"), url("../fonts/fraunces-v10-latin-900.woff2") format("woff2"), url("../fonts/fraunces-v10-latin-900.woff") format("woff"), url("../fonts/fraunces-v10-latin-900.ttf") format("truetype"), url("../fonts/fraunces-v10-latin-900.svg#Fraunces") format("svg");
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -364,6 +386,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-color: #F2F2F2;
+  font-family: 'Barlow', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -394,7 +418,393 @@ img {
 }
 
 .container {
-  margin: 0 auto;
+  width: 1320px;
   padding: 0 20px;
+  margin: 0 auto;
+}
+
+.header-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 45px 0;
+}
+
+.header-inner__navbar {
+  margin-left: auto;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__item {
+  margin-left: 33px;
+}
+
+.nav__link {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.923077px;
+  color: #83888F;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.nav__link:hover {
+  color: #333D4B;
+}
+
+.intro-inner {
+  width: 1280px;
+  height: 450px;
+  margin-bottom: 138px;
+  padding: 137px 0;
+  background-image: url(../../images/intro-bgi.png);
+  background-repeat: no-repeat;
+}
+
+.intro-info {
+  width: 445px;
+  margin-left: 85px;
+}
+
+.intro-info__title {
+  margin: 0;
+  padding: 0;
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 72px;
+  color: #FEFCF7;
+  margin-bottom: 32px;
+}
+
+.intro-info__text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+  opacity: 0.8;
+}
+
+.how-it-works__inner {
+  width: 1280px;
+  padding: 50px 85px;
+  background-color: #293038;
+}
+
+.how-it-works {
+  margin-top: 200px;
+  margin-bottom: 168px;
+}
+
+.line {
+  width: 760px;
+  height: 1px;
+  margin-top: 100px;
+  margin-bottom: 82px;
+  margin-left: 60px;
+  border: 2px solid #FDD6BA;
+  border-bottom: none;
+  position: relative;
+}
+
+.line__circle {
+  width: 31px;
+  height: 31px;
+  background-color: transparent;
+  border: 2px solid #0E8784;
+  border-radius: 50%;
+  position: absolute;
+  top: -17px;
+  left: 0;
+}
+
+.line__circle:nth-child(1) {
+  position: absolute;
+  left: -15px;
+}
+
+.line__circle:nth-child(2) {
+  position: absolute;
+  left: 50%;
+}
+
+.line__circle:nth-child(3) {
+  position: absolute;
+  left: 98%;
+}
+
+.steps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+.steps__item {
+  width: 285px;
+  margin-right: 95px;
+}
+
+.steps__number {
+  font-family: 'Fraunces', serif;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 72px;
+  color: #FDD6BA;
+}
+
+.steps__title {
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 36px;
+  color: #FEFCF7;
+  margin-top: 38px;
+  margin-bottom: 42px;
+}
+
+.steps__text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+}
+
+.order-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-bottom: 168px;
+}
+
+.left__list {
+  list-style: none;
+}
+
+.left__item {
+  width: 255px;
+}
+
+.left__item + .left__item {
+  border-top: 1px solid rgba(41, 48, 56, 0.25);
+  opacity: 0.25;
+}
+
+.left__item + .left__item:hover {
+  opacity: 1;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.left__link {
+  text-decoration: none;
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.left__number {
+  margin-right: 28px;
+  color: #83888F;
+}
+
+.left__number--active {
+  color: #0E8784;
+}
+
+.left__text {
+  color: #333D4B;
+}
+
+.type {
+  width: 730px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.type ~ .type {
+  margin-bottom: 80px;
+}
+
+.type__img {
+  margin-bottom: 23px;
+}
+
+.type__title {
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  color: #83888F;
+  margin-top: 10px;
+}
+
+.coffee {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 80px;
+}
+
+.card {
+  width: 228px;
+  padding: 32px 28px 84px 28px;
+  background: #F4F1EB;
+  border-radius: 8px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.card:hover {
+  background-color: #FDD6BA;
+}
+
+.card__title {
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #333D4B;
+}
+
+.card__text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #333D4B;
+}
+
+input:checked ~ .card {
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  background-color: #0E8784;
+}
+
+input:checked ~ .card .card__title, input:checked ~ .card .card__text {
+  color: #fff;
+}
+
+.summary {
+  width: 730px;
+  padding: 50px 64px;
+  background-color: #293039;
+  border-radius: 15px;
+}
+
+.summary__title {
+  font-size: 16px;
+  line-height: 26px;
+  text-transform: uppercase;
+  opacity: 0.5;
+  color: #fff;
+}
+
+.summary__text {
+  font-family: "Fraunces", sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 40px;
+  color: #fff;
+}
+
+.summary__green {
+  color: #0E8784;
+}
+
+.btn {
+  margin-top: 40px;
+  float: right;
+  padding: 15px 30px;
+  font-family: 'Fraunces' , 'Arial' sans-serif;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 25px;
+  text-decoration: none;
+  background: #E2DEDB;
+  border-radius: 6px;
+  color: #FEFCF7;
+  text-align: center;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.btn:hover {
+  background-color: #0E8784;
+}
+
+.btn:active {
+  background: #66D2CF;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #2C343E;
+  padding: 45px 85px;
+  margin-bottom: 88px;
+}
+
+.footer-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-inner__logo {
+  display: block;
+  margin-right: 100px;
+}
+
+.footer__link:hover {
+  color: #FEFCF7;
+}
+
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+.footer__item {
+  margin-right: 24px;
+}
+
+.footer__icon {
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  fill: #FEFCF7;
+}
+
+.footer__icon:hover {
+  fill: #FDD6BA;
 }
 /*# sourceMappingURL=main.css.map */
