--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,4 @@
-// $your-varible-name: red
+$main-family: 'Fraunces' , sans-serif;
+$main-bgi-color: #333D4B;
+$main-active-color: #0E8784;
+$main-hover-color: #FDD6BA;
