--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,4 +1,7 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
+@import "intro";
+@import "how-it-works";
+@import "order";
 @import "footer";
