--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -15,6 +15,8 @@ body {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	background-color: #F2F2F2;
+	font-family: 'Barlow', sans-serif;
 	margin: 0;
 	padding: 0;
 }
